# ai-observ-summarizer

./: .gitignore  CONTRIBUTING.md  DEVELOPER_INSIGHTS.md  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: build-and-push.yml  build-images.yml  build-operator-images.yml  cleanup-old-images.yml  create-release.yml  deploy.yml  prepare-release.yml  rebase-check.yml  run_tests.yml  undeploy.yml  update-versions.yml
deploy/operator/: .gitignore  Dockerfile  Makefile  PROJECT  README.md  bundle.Dockerfile  catalog-source.yaml  catalog.Dockerfile  watches.yaml
docs/: CHATBOTS.md  DEPENDENCY_LOCK_SUMMARY.md  DEV_GUIDE.md  DUAL_DEPLOYMENT_IMPLEMENTATION.md  GITHUB_ACTIONS.md  HELM_CHARTS.md  INTEL_GAUDI_METRICS.md  KORREL8R_INTEGRATION.md  MCP_SERVER_SETUP.md  METRICS_ARCHITECTURE.md  MODEL-CONFIGURATION.md  OBSERVABILITY_OVERVIEW.md  OPERATOR.md  RELEASE_PROCESS.md  SEMANTIC_VERSIONING.md  SUMMARIZER_QUAY_IMAGE_CLEANUP.md  TROUBLESHOOTING.md  VLLM_METRICS_ENHACEMENTS_PROPOSAL.md  VLLM_METRICS_REFERENCE.md  VLLM_MIGRATION_SUMMARY.md  llamastack-operator-migration.md
docs/plan/: external-llm-support.md  llama-tool-calling-test-results.md  (+1 more)
openshift-plugin/: .dockerignore  .gitignore  .yarnrc  Dockerfile  Dockerfile.plugin  Dockerfile.react-ui  README.md  console-extensions.json  jest.config.js  package.json  start-console.sh  tsconfig.plugin.json
scripts/: chatbot_mcp_cli_example.py  enable-user-workload-monitoring.sh  generate-mcp-config.sh  generate-model-config.sh  local-dev.sh  operator-manager.sh  verify-version-locks.sh
src/ui/: ui.py  (+4 more)
tests/: test_smart_metrics_integration.py
(+344 files in other folders)
