[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openshift-ai-observability-summarizer"
version = "0.1.0"
description = "AI Observability Metric Summarizer"
requires-python = "==3.11.*"

dependencies = [
    "fastapi==0.135.1",
    "pydantic==2.12.5",
    "pandas==2.3.1",
    "requests==2.32.5",
    "scipy==1.17.1",
    "markdown==3.10.2",
    "dateparser==1.3.0",
    "llama-stack-client==0.2.12",
    "fire==0.7.1",
    "pytest==9.0.2",
    "fastmcp==3.0.2",
    "pytest-cov==7.0.0",
    "structlog==25.5.0",
    "trio==0.33.0",
    "mcp[client]==1.26.0",
    "anthropic==0.84.0",
    "openai==2.24.0",
    "google-generativeai==0.8.6",
    "itsdangerous==2.2.0",
    "langchain-core>=0.3.0,<2",
    "langchain-openai>=0.3.0,<1",
    "langchain-anthropic>=0.3.0,<1",
    "langchain-google-genai>=3.0.0,<5",
    "langgraph>=0.3.0,<1",
]

[dependency-groups]
test = [
    "pytest==9.0.2",
    "pytest-mock==3.14.1",
    "httpx==0.28.1",
    "pytest-cov==7.0.0",
]
dev = [
    "black==25.1.0",
    "ruff==0.12.4",
    "matplotlib==3.10.3",
    "uvicorn==0.41.0",
    "weasyprint==65.1",
]

[tool.hatch.build.targets.wheel]
packages = [
  "src/common",
  "src/core",
  "src/mcp_server",
  "src/alerting",
  "src/chatbots",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/__init__.py",
    "src/api/report_assets/report_config.py",
    "src/api/report_assets/report_renderer.py",
]

[tool.coverage.report]

show_missing = false
